# ctrutils

./: .coveragerc  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MAKEFILE_SUMMARY.md  Makefile  README.md  TEST_SUMMARY.md  generate_docs.sh  mypy.ini  production.log.rotating  publish-project.sh  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh
.devcontainer/: ctrutils.Dockerfile  ctutils.Dockerfile  devcontainer.json
.github/workflows/: docs.yml  tests.yml
config/: .coveragerc  README.md
ctrutils/: __init__.py
ctrutils/database/: __init__.py
ctrutils/database/influxdb/: InfluxdbOperation.py  (+1 more)
ctrutils/handler/: README.md  __init__.py
ctrutils/scheduler/: README.md  __init__.py  scheduler.py
ctrutils/template/: email_sender.py
ctrutils/utils/: date_utils.py
docs/: BEFORE_AFTER.md  INFLUXDB_API_REFERENCE.md  INFLUXDB_EXAMPLES.md  INFLUXDB_USAGE.md  MAKEFILE_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REORGANIZATION.md  TEST_SUMMARY.md
docs/scheduler/: SCHEDULER_CHEATSHEET.md  SCHEDULER_IMPROVEMENTS.md  SCHEDULER_RESUMEN.md
docs/source/: conf.py  ctrutils.database.influxdb.rst  ctrutils.database.rst  ctrutils.handler.diagnostic.rst  ctrutils.handler.logging.rst  ctrutils.handler.rst  ctrutils.handlers.rst  ctrutils.rst  ctrutils.template.rst  ctrutils.utils.rst  index.rst  modules.rst
docs_source/: conf.py  contributing.rst  index.rst  requirements.txt
docs_source/_static/: custom.css
docs_source/api/: handler.rst  index.rst  influxdb.rst  scheduler.rst
docs_source/examples/: influxdb_examples.rst  scheduler_examples.rst
docs_source/guides/: quickstart.rst
examples/: demo_influxdb_improvements.py  handler_demo.py  influxdb_simple_example.py  influxdb_usage_example.py  scheduler_advanced_demo.py  scheduler_simple.py  simple_example.py
makefiles/: README.md  build.mk  clean.mk  docker.mk  docs.mk  install.mk  quality.mk  test.mk  variables.mk  workflows.mk
scripts/: README.md  publish-project.sh
tests/: README.md  __init__.py  test_influxdb_operation.py  test_scheduler_quick.py
tests/fixtures/: __init__.py  influxdb_fixtures.py  scheduler_fixtures.py
tests/integration/: docker-compose-test.yml  test_influxdb_integration.py
tests/unit/: test_influxdb_admin_comprehensive.py  test_influxdb_advanced_features.py  test_influxdb_comprehensive_coverage.py  test_influxdb_edge_cases.py  test_influxdb_error_handling.py  test_influxdb_final_coverage_push.py  test_influxdb_operation.py  test_influxdb_query_delete_advanced.py  test_influxdb_retention_and_helpers.py  test_influxdb_timeseries_helpers.py  test_influxdb_validation.py  test_influxdb_write_operations.py  test_scheduler.py  test_scheduler_edge_cases.py
(+23 files in other folders)
