[tool.poetry]
name = "ctrutils"
version = "11.0.0"
description = "Librería minimalista para operaciones con InfluxDB y programación de tareas"
authors = ["CristianTacoronteRivero <tacoronteriverocristian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
influxdb = "^5.3.2"
pandas = "^2.2.3"
numpy = "^2.0.0"
python-dateutil = "^2.9.0.post0"
apscheduler = "^3.10.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.12.1"
pylint = "^3.3.1"
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
types-python-dateutil = "^2.9.0.20241003"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
