[tool.poetry]
name = "ctrutils"
version = "11.0.0"
description = "Librería minimalista para operaciones con InfluxDB y programación de tareas"
authors = ["CristianTacoronteRivero <tacoronteriverocristian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
influxdb = "^5.3.2"
pandas = "^2.2.3"
numpy = "^2.0.0"
python-dateutil = "^2.9.0.post0"
apscheduler = "^3.10.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.12.1"
pylint = "^3.3.1"
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
types-python-dateutil = "^2.9.0.20241003"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
coverage = {extras = ["toml"], version = "^7.6.0"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25"
myst-parser = "^2.0.0"
sphinx-copybutton = "^0.5.2"
linkify-it-py = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Tests unitarios (sin dependencias externas)",
    "integration: Tests de integracion (requieren InfluxDB)",
    "slow: Tests lentos que se pueden saltar",
]

[tool.coverage.run]
source = ["ctrutils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
